# agx-emulsion

./: .gitignore  agx-emulsion.xmp  darktable_export.sh  frame.py  inspect_metadata.py  pyproject.toml  ruff.toml  verify_progress.py
agx_emulsion/data/profiles/: enlarger_neutral_ymc_filters.json  fujifilm_c200.json  fujifilm_c200_au.json  fujifilm_c200_auc.json  fujifilm_c200_oc_au.json  fujifilm_c200_oc_auc.json  fujifilm_crystal_archive_typeii.json  fujifilm_crystal_archive_typeii_uc.json  fujifilm_pro_400h.json  fujifilm_pro_400h_au.json  fujifilm_pro_400h_auc.json  fujifilm_pro_400h_oc_au.json  fujifilm_pro_400h_oc_auc.json  fujifilm_xtra_400.json  fujifilm_xtra_400_au.json  fujifilm_xtra_400_auc.json  kodak_100t_5247.json  kodak_100t_5247_au.json  kodak_100t_5247_auc.json  kodak_100t_5247_u.json  kodak_100t_5247_uc.json  kodak_2383.json  kodak_2383_uc.json  kodak_2393.json  kodak_2393_uc.json  kodak_ektacolor_edge.json  kodak_ektacolor_edge_uc.json  kodak_ektar_100.json  kodak_ektar_100_au.json  kodak_ektar_100_auc.json  kodak_endura_premier.json  kodak_endura_premier_uc.json  kodak_gold_200.json  kodak_gold_200_au.json  kodak_gold_200_auc.json  kodak_portra_160.json  kodak_portra_160_au.json  kodak_portra_160_auc.json  kodak_portra_400.json  kodak_portra_400_au.json  (+34 more)
agx_emulsion/gui/: main.py
agx_emulsion/model/: emulsion.py  process.py  stocks.py
agx_emulsion/pipeline/: nodes.py  pipeline.py
agx_emulsion/process/: config.py
agx_emulsion/process/core/: nodes.py  (+2 more)
scripts/: ROMM RGB.icc  make_profiles.py  make_spectral_upsampling_luts.py  prepare_input.py
(+57 files in other folders)
