[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agx-emulsion"
version = "0.1.0"
description = "Simulation of analog film photography"
authors = [
    {name = "Andrea Volpato", email = "volpedellenevi@gmail.com"}
]
license = {text = "GPLv3"}
requires-python = ">=3.11"
dependencies = [
    "numpy~=2.1.3",
    "matplotlib~=3.10.0",
    "scipy~=1.14.1",
    "colour-science~=0.4.6",
    "scikit-image~=0.25.0",
    "dotmap~=1.3.30",
    "opt-einsum~=3.4.0",
    "napari~=0.5.5",
    "magicgui~=0.10.0",
    "lmfit~=1.3.2",
    "pyqt5~=5.15.9",
    "numba~=0.61.0",
    "OpenImageIO~=3.0.3.1",
    "pyfftw~=0.15.0",
    "magic-class",
    "rawpy>=0.25.1",
    "imageio[tifffile]>=2.37.0",
]

[project.scripts]
agx-emulsion = "agx_emulsion.gui.main:main"

[tool.setuptools]
packages = {find = {}}
zip-safe = false

[tool.setuptools.package-data]
agx_emulsion = ["data/**/*"]

[tool.uv]
dev-dependencies = []
